# emtoolkit

./: Cargo.toml  README.md
crates/em-antennas/: Cargo.toml
crates/em-antennas/src/: arrays.rs  dipole.rs  lib.rs  link_budget.rs
crates/em-core/: Cargo.toml
crates/em-core/src/: complex.rs  constants.rs  coordinates.rs  error.rs  lib.rs  units.rs
crates/em-electrostatics/: Cargo.toml
crates/em-electrostatics/src/: capacitance.rs  gauss.rs  lib.rs  method_of_images.rs  point_charges.rs
crates/em-magnetostatics/: Cargo.toml
crates/em-magnetostatics/src/: biot_savart.rs  current_loops.rs  inductance.rs  lib.rs  solenoid.rs  wire_forces.rs
crates/em-propagation/: Cargo.toml
crates/em-propagation/src/: fresnel.rs  lib.rs  plane_wave.rs  polarization.rs  waveguide.rs
crates/em-timevarying/: Cargo.toml
crates/em-timevarying/src/: charge_continuity.rs  displacement_current.rs  faraday.rs  lib.rs
crates/em-transmission/: Cargo.toml
crates/em-transmission/src/: lib.rs  line_types.rs  matching.rs  smith_chart.rs  standing_waves.rs  stub_tuning.rs  transient.rs
crates/em-vectors/: Cargo.toml
crates/em-vectors/src/: differential_ops.rs  lib.rs  scalar_field.rs  vector_field.rs  vector_ops.rs
crates/em-wasm/: Cargo.toml
crates/em-wasm/src/: bind_antennas.rs  bind_core.rs  bind_electrostatics.rs  bind_magnetostatics.rs  bind_propagation.rs  bind_timevarying.rs  bind_transmission.rs  bind_vectors.rs  bind_waves.rs  lib.rs
crates/em-waves/: Cargo.toml
crates/em-waves/src/: lib.rs  phase.rs  power.rs  sinusoidal.rs  traveling.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  wasm.ts
web/src/briefs/: BarcodeBrief.tsx  CTScanBrief.tsx  CancerZapperBrief.tsx  CapSensorBrief.tsx  EMFSensorBrief.tsx  ElectromagnetBrief.tsx  GPSBrief.tsx  HealthRiskBrief.tsx  InductiveSensorBrief.tsx  LCDBrief.tsx  LEDBrief.tsx  LaserBrief.tsx  MicrowaveOvenBrief.tsx  RFIDBrief.tsx  ResistiveSensorBrief.tsx  SolarCellBrief.tsx  SupercapBrief.tsx
web/src/components/: ModuleSelector.css  ModuleSelector.tsx
web/src/modules/: AntennaGainModule.tsx  ApertureAntennaModule.tsx  ArrayFactorModule.tsx  BoundaryModule.tsx  CapacitanceModule.tsx  ChargeRelaxationModule.tsx  CoaxBFieldModule.tsx  CoaxialLineModule.tsx  ConstantsModule.tsx  CoordinatesModule.tsx  DipoleModule.tsx  DisplacementCurrentModule.tsx  DivCurlModule.tsx  ElectrostaticsModule.tsx  EnergyDensityModule.tsx  FaradayModule.tsx  FresnelModule.tsx  GaussModule.tsx  GeneratorModule.tsx  GradientModule.tsx  HelmholtzModule.tsx  ImpedanceModule.tsx  InductanceModule.tsx  LinkBudgetModule.tsx  LorentzForceModule.tsx  MagMaterialsModule.tsx  MagnetostaticsModule.tsx  MatchingModule.tsx  MaxwellModule.tsx  MediumPropertiesModule.tsx  MethodOfImagesModule.tsx  MicrostripModule.tsx  PhaseComparisonModule.tsx  PolarizationModule.tsx  PowerModule.tsx  QuarterWaveModule.tsx  RCCircuitModule.tsx  RLCircuitModule.tsx  RadarModule.tsx  ResonanceModule.tsx  (+16 more)
