[workspace]
resolver = "3"
members = [
    "crates/em-core",
    "crates/em-waves",
    "crates/em-transmission",
    "crates/em-vectors",
    "crates/em-electrostatics",
    "crates/em-magnetostatics",
    "crates/em-timevarying",
    "crates/em-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["RustyStack Team"]
license = "MIT OR Apache-2.0"
repository = "https://gitea.lan/rustystack/em-toolkit"

[workspace.dependencies]
# Math
nalgebra = "0.33"
num-complex = { version = "0.4", features = ["serde"] }
ndarray = { version = "0.16", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
proptest = "1.0"
approx = "0.5"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = "0.3"
