[package]
name = "em-antennas"
description = "Chapter 8: Antennas — radiation patterns, dipole/loop antennas, arrays, Friis equation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["antenna", "radiation-pattern", "dipole", "array-factor", "electromagnetics"]
categories = ["science", "simulation"]

[dependencies]
em-core = { path = "../em-core" }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
