[package]
name = "em-wasm"
description = "WebAssembly bindings for EM Toolkit computation engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
em-core = { path = "../em-core" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
