[package]
name = "em-waves"
description = "Chapter 1: Waves and Phasors — sinusoidal generation, phasor arithmetic, wave superposition, phase computation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["waves", "phasors", "sinusoidal", "electromagnetics"]
categories = ["science", "simulation"]

[dependencies]
em-core = { path = "../em-core" }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
